# Veritas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.css  app.html
frontend/src/lib/: home-search.ts  navbar-search.ts
frontend/src/lib/components/: ExampleProduct.svelte  Footer.svelte  ForBrands.svelte  Hero.svelte  HowItWorks.svelte  Navbar.svelte  WhyVeritas.svelte
frontend/src/lib/components/errors/: ErrorPage.svelte
frontend/src/lib/components/layout/: Footer.svelte  Navbar.svelte
frontend/src/lib/components/magic/animated-beam/: animated-beam.svelte
frontend/src/lib/components/magic/animated-grid-pattern/: animated-grid-pattern.svelte  index.ts
frontend/src/lib/components/magic/animated-theme-toggler/: animated-theme-toggler.svelte
frontend/src/lib/components/magic/blur-fade/: blur-fade.svelte
frontend/src/lib/components/magic/border-beam/: border-beam.svelte  index.ts
frontend/src/lib/components/magic/dot-pattern/: dot-pattern.svelte
frontend/src/lib/components/magic/interactive-hover-button/: interactive-hover-button.svelte
frontend/src/lib/components/magic/magic-card/: magic-card.svelte
frontend/src/lib/components/magic/pulsating-button/: pulsating-button.svelte
frontend/src/lib/components/product/: ProductBox.svelte  ProductBoxContainer.svelte  ProductContent.svelte  ProductSkeleton.svelte  ProductSkeletonContent.svelte
frontend/src/lib/components/stores/: theme.svelte.ts
frontend/src/lib/config/: benefits.ts
frontend/src/lib/features/search/: navbar.ts
frontend/src/lib/services/: product.ts
frontend/src/lib/types/: product.ts
frontend/src/lib/utils/: darkMode.ts  steps.ts  theme.ts  time.ts  types.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/product-not-found/: +page.svelte
frontend/src/routes/product/[id]/: +page.svelte
onchain/contract/: cabal.project  flake.nix  plinth-template.cabal
onchain/contract/app/: Actions.hs  GenAuctionValidatorBlueprint.hs  GenMintingPolicyBlueprint.hs  Queries.hs  State.hs  TestSuite.hs  Types.hs  Utils.hs
onchain/contract/nix/: outputs.nix  project.nix  shell.nix
onchain/contract/src/: AuctionMintingPolicy.hs  AuctionValidator.hs  Types.hs  Validator.hs
onchain/prototype/: prototypes.cabal
onchain/prototype/src/: Actions.hs  Main.hs  Queries.hs  TestSuite.hs  Types.hs  Utils.hs
onchain/prototype/v1/: prototype.cabal
onchain/prototype/v1/src/: Types.hs  Utils.hs
onchain/prototypes/v1/: veritas.cabal
onchain/prototypes/v1/src/: Actions.hs  State.hs  TestSuite.hs
