cabal-version:   3.0
name:            plinth-template
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

-- These options are supported by GHC and Plinth
common ghc-options
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TemplateHaskell
    TypeApplications
    UndecidableInstances
    ViewPatterns

-- These options are only for GHC builds (not supported by Plinth)
common ghc-only-options
  import:             ghc-options
  default-extensions: GADTs

-- These options are required for Plinth builds
common plinth-options
  import:      ghc-options
  ghc-options:
    -fobject-code -fno-full-laziness -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-spec-constr -fno-specialise
    -fno-strictness -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields -fplugin-opt
    PlutusTx.Plugin:target-version=1.1.0

common plutus-deps
  build-depends:
    , plutus-core ^>=1.57.0.0
    , plutus-ledger-api ^>=1.57.0.0
    , plutus-tx ^>=1.57.0.0
    , plutus-tx-plugin ^>=1.57.0.0

library plinth-validators
  import:          plinth-options, plutus-deps
  hs-source-dirs:  src
  build-depends:   base
  exposed-modules:
    AuctionMintingPolicy
    AuctionValidator

executable gen-auction-validator-blueprint
  import:         ghc-only-options, plutus-deps
  hs-source-dirs: app
  main-is:        GenAuctionValidatorBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plinth-validators

executable gen-minting-policy-blueprint
  import:         ghc-only-options, plutus-deps
  hs-source-dirs: app
  main-is:        GenMintingPolicyBlueprint.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plinth-validators
