cabal-version: 3.0
name: prototype
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: enzoblain
maintainer: enzoblain@proton.me
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable prototypes
  import: warnings
  main-is: Main.hs
  other-modules:
    Actions
    Queries
    State
    Types
    Utils

  -- other-extensions:
  build-depends:
    base ^>=4.18.3.0,
    random,
    time,
    uuid,
    uuid-types,

  hs-source-dirs: src
  default-language: Haskell2010
