cabal-version: 3.0
name: veritas
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: enzoblain
maintainer: enzoblain@proton.me
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable test
  import: warnings
  main-is: TestSuite.hs
  hs-source-dirs: src
  other-modules:
      Actions
      Queries
      State
      Types
      Utils
  build-depends:
      base >= 4.14 && < 5
    , bytestring
    , cryptonite
    , time
  default-language: Haskell2010
